// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters-list Renders \`filters-list\` with custom props 1`] = `
<div>
  <c-alert-stub
    type="info"
  >
    No filters added yet
  </c-alert-stub>
  <c-draggable-list-field-stub
    handle=".action-drag-handler"
    value="[object Object],[object Object]"
  >
    <filter-tile-stub
      editable="true"
      filter="[object Object]"
    />
    <filter-tile-stub
      editable="true"
      filter="[object Object]"
    />
  </c-draggable-list-field-stub>
  <button
    class="v-btn-legacy-m--y v-btn v-btn--outlined theme--light v-size--default primary--text"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add filter
    </span>
  </button>
</div>
`;

exports[`filters-list Renders \`filters-list\` with default props 1`] = `
<div>
  <c-alert-stub
    type="info"
    value="true"
  >
    No filters added yet
  </c-alert-stub>
  <c-draggable-list-field-stub
    handle=".action-drag-handler"
    value=""
  />
  <button
    class="v-btn-legacy-m--y v-btn v-btn--outlined theme--light v-size--default primary--text"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add filter
    </span>
  </button>
</div>
`;
